--- a/Clients.html
+++ b/Clients.html
@@ -18,7 +18,7 @@
 <body>
   <header>
     <div class="Logo">
-        <img src="images/logo.jpg" alt="AutoCarsRetro" class="image-responsive"/>
+        <img src="images/Logo.jpg" alt="AutoCarsRetro" class="image-responsive"/>
     <h1 class="titre">AutoCarsRetro</h1>
     </div>
 
