--- a/Vehicules.html
+++ b/Vehicules.html
@@ -17,7 +17,7 @@
 <body>
   <header>
     <div class="Logo">
-        <img src="images/logo.webp" alt="AutoCarsRetro" class="image-responsive"/>
+        <img src="images/Logo.jpg" alt="AutoCarsRetro" class="image-responsive"/>
     <h1 class="titre">AutoCarsRetro</h1>
     </div>
 
