--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header>
     
     <div class="Logo">
-        <img src="images/logo.webp" alt="AutoCarsRetro" class="image-responsive"/>
+        <img src="images/Logo.jpg" alt="AutoCarsRetro" class="image-responsive"/>
     <h1 class="titre">AutoCarsRetro</h1>
     </div>
     
