--- a/index.html
+++ b/index.html
@@ -16,6 +16,25 @@
 
 
 <body>
+
+    <h1>Page principale</h1>
+    <form action="script.php" method="POST">
+        <button type="submit">Envoyer la demande</button>
+    </form>
+
+    <!-- Message de confirmation -->
+    <div id="message" style="display: none; color: green;">
+        La demande a bien été envoyée !
+    </div>
+
+    <script>
+        // Vérifie si l'URL contient le paramètre 'success'
+        const urlParams = new URLSearchParams(window.location.search);
+        if (urlParams.has('success')) {
+            document.getElementById('message').style.display = 'block';
+        }
+    </script>
+    
   <header>
     
     <div class="Logo">
