--- a/Devis.html
+++ b/Devis.html
@@ -73,40 +73,38 @@
                 <label><input type="checkbox" name="services[]" value="Mc Cormick Farmall D 212"> Mc Cormick Farmall D 212</label>
                 <label><input type="checkbox" name="services[]" value="Fendt F 24"> Fendt F 24</label>
             </div>
-          <div class="form-group">
-              <label for="message">Détails du Projet :</label>
-              <textarea id="message" name="message" rows="5" required></textarea>
-          </div>
-          <div class="form-group">
-              <button type="submit" class="submit-btn" method="POST">Envoyer la Demande</button>
-          </div>
-      </form>
-  </div>
-          
+         <div class="form-group">
+                <button type="submit" class="submit-btn">Envoyer la Demande</button>
+            </div>
+        </form>
+    </div>
 
+    <!-- Message de confirmation -->
+    <div id="confirmation-message" style="display: none; color: green;">
+        Votre demande a bien été envoyée !
+    </div>
+
+    <!-- Script pour la validation du formulaire et afficher un message -->
     <script>
-      document.getElementById('devis-form').addEventListener('submit', function (event) {
-          var first-name = document.getElementById('first-name').value;
-          var last-name = document.getElementById('last-name').value;
-          var compagny = document.getElementById('compagny').value;
-          var email = document.getElementById('email').value;
-          var phone = document.getElementById('phone').value;
-          var message = document.getElementById('message').value;
+        document.getElementById('devis-form').addEventListener('submit', function (event) {
+            var firstname = document.getElementById('first-name').value;
+            var lastname = document.getElementById('last-name').value;
+            var email = document.getElementById('email').value;
+            var phone = document.getElementById('phone').value;
+            var message = document.getElementById('message').value;
 
-          if (name === "" || email === "" || phone === "" || message === "") {
-              alert("Veuillez remplir tous les champs.");
-              event.preventDefault();  // Empêche l'envoi du formulaire
-          }
-      });
+            if (firstname === "" || lastname === "" || email === "" || phone === "" || message === "") {
+                alert("Veuillez remplir tous les champs obligatoires.");
+                event.preventDefault();  // Empêche l'envoi du formulaire si des champs sont vides
+            }
+        });
 
-        // Vérifie si l'URL contient le paramètre 'success'
+        // Affiche un message de confirmation si redirigé après soumission
         const urlParams = new URLSearchParams(window.location.search);
         if (urlParams.has('success')) {
-            document.getElementById('message').style.display = 'block';
+            document.getElementById('confirmation-message').style.display = 'block';
         }
-        
     </script>
-
 
   </main>
 
