--- a/Devis.html
+++ b/Devis.html
@@ -43,7 +43,7 @@
 
     <div class="container">
         <h2>Demande de Devis</h2>
-        <form action="https://formspree.io/f/{votre-ID}" method="POST" id="devis-form">
+        <form action="https://formspree.io/f/xzzdgvpb" method="POST" id="devis-form">
             <div class="form-group">
                 <label for="last-name">Nom :</label>
                 <input type="text" id="last-name" name="last-name" required>
