--- a/Vehicules.html
+++ b/Vehicules.html
@@ -61,44 +61,43 @@
     </section>
 -->
         <div class="gallery">
-          <div class="product">
-            <img src="images/car1.1.jpg" alt="Mercedes Benz O 3500">
-            <div class="product-description">
-              <p>Autocar ancien</p>
-              <h3>Année : 1953</h3>
-              <h5>Mercedes Benz O 3500</h5>
-              <h5>29 places</h5>
-              <a href="Devis.html">
-              <button class="bouton5">demander un devis</button>
-              </a>
-            </div>
-          </div>
+  <div class="product">
+    <img src="images/car1.1.jpg" alt="Mercedes Benz O 3500">
+    <div class="product-description">
+      <p>Autocar ancien</p>
+      <h3>Année : 1953</h3>
+      <h5>Mercedes Benz O 3500</h5>
+      <h5>29 places</h5>
+      <a href="Devis.html?vehicle=Mercedes%20Benz%20O%203500">
+        <button class="bouton5">Demander un devis</button>
+      </a>
+    </div>
+  </div>
 
-          <div class="product">
-            <img src="images/car2.1.jpg" alt="Setra Kässbohrer 215 HD">
-            <div class="product-description">
-              <p>Autocar ancien</p>
-              <h3>Année : 1989</h3>
-              <h5>Setra Kässbohrer 215 HD</h5>
-              <h5>42 places (avec salon arrière)</h5>
-              <a href="Devis.html">
-              <button class="bouton5">demander un devis</button>
-              </a>
-            </div>
-          </div>
-          
+  <div class="product">
+    <img src="images/car2.1.jpg" alt="Setra Kässbohrer 215 HD">
+    <div class="product-description">
+      <p>Autocar ancien</p>
+      <h3>Année : 1989</h3>
+      <h5>Setra Kässbohrer 215 HD</h5>
+      <h5>42 places (avec salon arrière)</h5>
+      <a href="Devis.html?vehicle=Setra%20Kässbohrer%20215%20HD">
+        <button class="bouton5">Demander un devis</button>
+      </a>
+    </div>
+  </div>
 
-          <div class="product">
-            <img src="images/car3.1.jpg" alt="Mercedes O321 H">
-            <div class="product-description">
-              <p>Autocar ancien</p>
-              <h3>Année : 1962</h3>
-              <h5>Mercedes O321 H</h5>
-              <a href="Devis.html">
-              <button class="bouton5">demander un devis</button>
-              </a>
-            </div>
-          </div>
+  <div class="product">
+    <img src="images/car3.1.jpg" alt="Mercedes O321 H">
+    <div class="product-description">
+      <p>Autocar ancien</p>
+      <h3>Année : 1962</h3>
+      <h5>Mercedes O321 H</h5>
+      <a href="Devis.html?vehicle=Mercedes%20O321%20H">
+        <button class="bouton5">Demander un devis</button>
+      </a>
+    </div>
+  </div>
 
 
           <div class="product">
@@ -108,7 +107,7 @@
               <h3>Année : 1967</h3>
               <h5>Citroën ID 19</h5>
               <h5>5 places</h5>
-              <a href="Devis.html">
+              <a href="Devis.html?vehicle=Citroën%2ID%219">
               <button class="bouton5">demander un devis</button>
               </a>
             </div>
@@ -122,7 +121,7 @@
               <h3>Année : 1972</h3>
               <h5>Citroën D Super</h5>
               <h5>5 places</h5>
-              <a href="Devis.html">
+              <a href="Devis.html?vehicle=Citroën%2D%2Super">
               <button class="bouton5">demander un devis</button>
               </a>
             </div>
@@ -134,7 +133,7 @@
               <p>Matériel Agricole</p>
               <h3>Année : 1957</h3>
               <h5>Mc Cormick Farmall D 212</h5>
-              <a href="Devis.html">
+              <a href="Devis.html?vehicle=Mc%2Cormick%2Farmall%2D%2212">
               <button class="bouton5">demander un devis</button>
               </a>
             </div>
@@ -146,7 +145,7 @@
               <p>Matériel Agricole</p>
               <h3>Année : 1957</h3>
               <h5>Fendt F 24</h5>
-              <a href="Devis.html">
+              <a href="Devis.html?vehicle=Fendt%2F%224">
               <button class="bouton5">demander un devis</button>
               </a>
             </div>
