--- a/Devis.html
+++ b/Devis.html
@@ -53,7 +53,18 @@
                 <input type="text" id="first-name" name="first-name" required>
             </div>
 
-            <!-- Vos autres champs ici -->
+            <div class="form-group">
+                <label for="compagny">Société :</label>
+                <input type="text" id="compagny" name="compagny">
+            </div>
+            <div class="form-group">
+                <label for="email">Email :</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="phone">Téléphone :</label>
+                <input type="tel" id="phone" name="phone" required>
+            </div>
 
             <label>Véhicule(s) concerné(s) :</label>
             <div class="checkbox-group">
