--- a/Devis.html
+++ b/Devis.html
@@ -42,7 +42,7 @@
   <main>
 
     <div class="container">
-        <h2>Formulaire de demande de devis</h2>
+        <h2>Demande de Devis</h2>
         <form action="https://formspree.io/f/{votre-ID}" method="POST" id="devis-form">
             <div class="form-group">
                 <label for="last-name">Nom :</label>
@@ -52,7 +52,6 @@
                 <label for="first-name">Prénom :</label>
                 <input type="text" id="first-name" name="first-name" required>
             </div>
-
             <div class="form-group">
                 <label for="compagny">Société :</label>
                 <input type="text" id="compagny" name="compagny">
@@ -65,43 +64,48 @@
                 <label for="phone">Téléphone :</label>
                 <input type="tel" id="phone" name="phone" required>
             </div>
-
             <label>Véhicule(s) concerné(s) :</label>
             <div class="checkbox-group">
-                <label><input type="checkbox" name="services[]" value="Mercedes Benz O 3500" id="Mercedes Benz O 3500"> Mercedes Benz O 3500</label>
-                <label><input type="checkbox" name="services[]" value="Setra Kässbohrer 215 HD" id="Setra Kässbohrer 215 HD"> Setra Kässbohrer 215 HD</label>
-                <label><input type="checkbox" name="services[]" value="Mercedes O321 H" id="Mercedes O321 H"> Mercedes O321 H</label>
-                <label><input type="checkbox" name="services[]" value="Citroën ID 19" id="Citroën ID 19"> Citroën ID 19</label>
-                <label><input type="checkbox" name="services[]" value="Citroën D Super" id="Citroën D Super"> Citroën D Super</label>
-                <label><input type="checkbox" name="services[]" value="Mc Cormick Farmall D 212" id="Mc Cormick Farmall D 212"> Mc Cormick Farmall D 212</label>
-                <label><input type="checkbox" name="services[]" value="Fendt F 24" id="Fendt F 24"> Fendt F 24</label>
+                <label><input type="checkbox" name="services[]" value="Mercedes Benz O 3500"> Mercedes Benz O 3500</label>
+                <label><input type="checkbox" name="services[]" value="Setra Kässbohrer 215 HD"> Setra Kässbohrer 215 HD</label>
+                <label><input type="checkbox" name="services[]" value="Mercedes O321 H"> Mercedes O321 H</label>
+                <label><input type="checkbox" name="services[]" value="Citroën ID 19"> Citroën ID 19</label>
+                <label><input type="checkbox" name="services[]" value="Citroën D Super"> Citroën D Super</label>
+                <label><input type="checkbox" name="services[]" value="Mc Cormick Farmall D 212"> Mc Cormick Farmall D 212</label>
+                <label><input type="checkbox" name="services[]" value="Fendt F 24"> Fendt F 24</label>
             </div>
-
             <div class="form-group">
-                <button type="submit">Envoyer la Demande</button>
+                <label for="message">Détails du Projet :</label>
+                <textarea id="message" name="message" rows="5" required></textarea>
+            </div>
+            <div class="form-group">
+                <button type="submit" class="submit-btn">Envoyer la Demande</button>
             </div>
         </form>
     </div>
 
     <script>
-        // Fonction pour obtenir le paramètre de l'URL
-        function getParameterByName(name) {
-            const urlParams = new URLSearchParams(window.location.search);
-            return urlParams.get(name);
-        }
+        document.getElementById('devis-form').addEventListener('submit', function(event) {
+            event.preventDefault(); // Empêche l'envoi immédiat
 
-        // Récupérer le véhicule depuis l'URL
-        const vehicle = getParameterByName('vehicle');
-
-        // Si un véhicule est passé dans l'URL, cocher la case correspondante
-        if (vehicle) {
-            const checkbox = document.getElementById(vehicle);
-            if (checkbox) {
-                checkbox.checked = true;
-            }
-        }
+            // Effectue l'envoi du formulaire
+            fetch(this.action, {
+                method: this.method,
+                body: new FormData(this),
+                headers: { 'Accept': 'application/json' }
+            }).then(response => {
+                if (response.ok) {
+                    // Affiche un message de succès et redirige vers index.html
+                    alert("Votre demande a été envoyée avec succès.");
+                    window.location.href = "index.html"; // Redirection automatique
+                } else {
+                    alert("Il y a eu un problème avec votre demande.");
+                }
+            }).catch(error => {
+                alert("Erreur lors de l'envoi. Veuillez réessayer.");
+            });
+        });
     </script>
-
   </main>
 
   <footer>
