--- a/Clients.html
+++ b/Clients.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="images/Logo.jpg" href="images/Logo.jpg">
     <title>AutoCarsRetro</title>
     <link href="style.css" rel="stylesheet">
 
@@ -20,6 +21,7 @@
     <div class="Logo">
         <img src="images/Logo.jpg" alt="AutoCarsRetro" class="image-responsive"/>
     <h1 class="titre">AutoCarsRetro</h1>
+        <h7>En Haute-Normandie</h7>
     </div>
 
     <nav class="menu">
