--- a/Devis.html
+++ b/Devis.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="images/Logo.jpg" href="images/Logo.jpg">
     <title>AutoCarsRetro</title>
     <link href="style.css" rel="stylesheet">
 
@@ -20,6 +21,7 @@
     <div class="Logo">
         <img src="images/Logo.jpg" alt="AutoCarsRetro" class="image-responsive"/>
     <h1 class="titre">AutoCarsRetro</h1>
+        <h7>En Haute-Normandie</h7>
     </div>
 
     <nav class="menu">
@@ -79,7 +81,7 @@
                 <textarea id="message" name="message" rows="5" required></textarea>
             </div>
             <div class="form-group">
-                <button type="submit" class="submit-btn">Envoyer la Demande</button>
+                <button type="submit" class="submit-btn">envoyer la demande</button>
             </div>
         </form>
     </div>
