--- a/Vehicules.html
+++ b/Vehicules.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="images/Logo.jpg" href="images/Logo.jpg">
     <title>AutoCarsRetro</title>
     <link href="style.css" rel="stylesheet">
 
@@ -19,6 +20,7 @@
     <div class="Logo">
         <img src="images/Logo.jpg" alt="AutoCarsRetro" class="image-responsive"/>
     <h1 class="titre">AutoCarsRetro</h1>
+        <h7>En Haute-Normandie</h7>
     </div>
 
     <nav class="menu">
@@ -69,7 +71,7 @@
       <h5>Mercedes Benz O 3500</h5>
       <h5>29 places</h5>
       <a href="Devis.html?vehicle=Mercedes%20Benz%20O%203500">
-        <button class="bouton5">Demander un devis</button>
+        <button class="bouton5">demander un devis</button>
       </a>
     </div>
   </div>
@@ -82,7 +84,7 @@
       <h5>Setra Kässbohrer 215 HD</h5>
       <h5>42 places (avec salon arrière)</h5>
       <a href="Devis.html?vehicle=Setra%20Kässbohrer%20215%20HD">
-        <button class="bouton5">Demander un devis</button>
+        <button class="bouton5">demander un devis</button>
       </a>
     </div>
   </div>
@@ -94,7 +96,7 @@
       <h3>Année : 1962</h3>
       <h5>Mercedes O321 H</h5>
       <a href="Devis.html?vehicle=Mercedes%20O321%20H">
-        <button class="bouton5">Demander un devis</button>
+        <button class="bouton5">demander un devis</button>
       </a>
     </div>
   </div>
