--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
     
     <div class="Logo">
         <img src="images/Logo.jpg" alt="AutoCarsRetro" class="image-responsive"/>
-    <h1 class="titre">AutoCarsRetro</h1>
-    <h7>En Haute-Normandie</h7>
+     <div class="titre">
+            <h1 class="main-title">AutoCarsRetro</h1>
+            <h7 class="subtitle">En Haute-Normandie</h7>
+     </div>
     </div>
     
     <nav class="menu">
