--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
 <body>
     
   <header>
+      <div class="first-row">
         <div class="Logo">
-        <img src="images/Logo.jpg" alt="AutoCarsRetro" class="image-responsive"/>
-    <h1 class="titre">AutoCarsRetro</h1>
-        <h7>En Haute-Normandie</h7>
-    </div>
+          <img src="images/Logo.jpg" alt="AutoCarsRetro" class="image-responsive"/>
+        </div>
+        <div class="titre">
+          <h1>AutoCarsRetro</h1>
+          <h7>En Haute-Normandie</h7>
+        </div>
+      </div>
     
     <nav class="menu">
       <ul>
