--- a/Vehicules.html
+++ b/Vehicules.html
@@ -70,38 +70,69 @@
   <div class="product">
     <img src="images/car1.1.jpg" alt="Mercedes Benz O 3500">
     <div class="product-description">
-      <p>Autocar ancien</p>
-      <h3>Année : 1953</h3>
-      <h5>Mercedes Benz O 3500</h5>
-      <h5>29 places</h5>
-      <a href="Devis.html?vehicle=Mercedes%20Benz%20O%203500">
-        <button class="bouton5">demander un devis</button>
-      </a>
+        <div class="row1">
+          <p>Autocar ancien</p>
+        </div>
+        <div class="row2">
+          <h3>Année : 1953</h3>
+        </div>
+         <div class="row3">
+          <h5>Mercedes Benz O 3500</h5>
+         </div>
+        <div class="row4">
+          <h5>29 places</h5>
+        </div>
+        <div class="row5">
+          <a href="Devis.html?vehicle=Mercedes%20Benz%20O%203500">
+          <button class="bouton5">demander un devis</button>
+          </a>   
+        </div>
     </div>
   </div>
 
   <div class="product">
     <img src="images/car2.1.jpg" alt="Setra Kässbohrer 215 HD">
     <div class="product-description">
-      <p>Autocar ancien</p>
-      <h3>Année : 1989</h3>
-      <h5>Setra Kässbohrer 215 HD</h5>
-      <h5>42 places (avec salon arrière)</h5>
-      <a href="Devis.html?vehicle=Setra%20Kässbohrer%20215%20HD">
-        <button class="bouton5">demander un devis</button>
-      </a>
+        <div class="row1">
+          <p>Autocar ancien</p>
+        </div>
+        <div class="row2">
+          <h3>Année : 1989</h3>
+        </div>
+         <div class="row3">
+          <h5>Setra Kässbohrer 215 HD</h5>
+         </div>
+        <div class="row4">
+          <h5>42 places</h5>
+        </div>
+        <div class="row5">
+          <a href="Devis.html?vehicle=Mercedes%20Benz%20O%203500">
+          <button class="bouton5">demander un devis</button>
+          </a>   
+        </div>
     </div>
   </div>
 
   <div class="product">
     <img src="images/car3.1.jpg" alt="Mercedes O321 H">
     <div class="product-description">
-      <p>Autocar ancien</p>
-      <h3>Année : 1962</h3>
-      <h5>Mercedes O321 H</h5>
-      <a href="Devis.html?vehicle=Mercedes%20O321%20H">
-        <button class="bouton5">demander un devis</button>
-      </a>
+       <div class="row1">
+          <p>Autocar ancien</p>
+        </div>
+        <div class="row2">
+          <h3>Année : 1962</h3>
+        </div>
+         <div class="row3">
+          <h5>Mercedes 0321 H</h5>
+         </div>
+        <div class="row4">
+          <h5></h5>
+        </div>
+        <div class="row5">
+          <a href="Devis.html?vehicle=Mercedes%20Benz%20O%203500">
+          <button class="bouton5">demander un devis</button>
+          </a>   
+        </div> 
     </div>
   </div>
 
@@ -109,13 +140,23 @@
           <div class="product">
             <img src="images/voiture1.1.jpg" alt="Citroën ID 19">
             <div class="product-description">
-              <p>Voiture ancienne</p>
-              <h3>Année : 1967</h3>
-              <h5>Citroën ID 19</h5>
-              <h5>5 places</h5>
-              <a href="Devis.html?vehicle=Citroën%2ID%219">
-              <button class="bouton5">demander un devis</button>
-              </a>
+              <div class="row1">
+          <p>Voiture ancienne</p>
+        </div>
+        <div class="row2">
+          <h3>Année : 1967</h3>
+        </div>
+         <div class="row3">
+          <h5>Citroën ID 19</h5>
+         </div>
+        <div class="row4">
+          <h5>5 places</h5>
+        </div>
+        <div class="row5">
+          <a href="Devis.html?vehicle=Mercedes%20Benz%20O%203500">
+          <button class="bouton5">demander un devis</button>
+          </a>   
+        </div>
             </div>
           </div>
 
@@ -123,37 +164,70 @@
           <div class="product">
             <img src="images/voiture2.1.jpg" alt="Citroën D Super">
             <div class="product-description">
-              <p>Voiture ancienne</p>
-              <h3>Année : 1972</h3>
-              <h5>Citroën D Super</h5>
-              <h5>5 places</h5>
-              <a href="Devis.html?vehicle=Citroën%2D%2Super">
-              <button class="bouton5">demander un devis</button>
-              </a>
+                <div class="row1">
+          <p>Voiture ancienne</p>
+        </div>
+        <div class="row2">
+          <h3>Année : 1972</h3>
+        </div>
+         <div class="row3">
+          <h5>Citroën D Super</h5>
+         </div>
+        <div class="row4">
+          <h5>5 places</h5>
+        </div>
+        <div class="row5">
+          <a href="Devis.html?vehicle=Mercedes%20Benz%20O%203500">
+          <button class="bouton5">demander un devis</button>
+          </a>   
+        </div>
+
             </div>
           </div>
 
           <div class="product">
             <img src="images/tracteur1.1.jpg" alt="Mc Cormick Farmall D 212">
             <div class="product-description">
-              <p>Matériel Agricole</p>
-              <h3>Année : 1957</h3>
-              <h5>Mc Cormick Farmall D 212</h5>
-              <a href="Devis.html?vehicle=Mc%2Cormick%2Farmall%2D%2212">
-              <button class="bouton5">demander un devis</button>
-              </a>
+                <div class="row1">
+          <p>Matériel Agricole</p>
+        </div>
+        <div class="row2">
+          <h3>Année : 1957</h3>
+        </div>
+         <div class="row3">
+          <h5>Mc Cormick Farmall D 212</h5>
+         </div>
+        <div class="row4">
+          <h5></h5>
+        </div>
+        <div class="row5">
+          <a href="Devis.html?vehicle=Mercedes%20Benz%20O%203500">
+          <button class="bouton5">demander un devis</button>
+          </a>   
+        </div>
             </div>
           </div>
 
           <div class="product">
             <img src="images/tracteur2.1.avif" alt="Fendt F 24">
             <div class="product-description">
-              <p>Matériel Agricole</p>
-              <h3>Année : 1957</h3>
-              <h5>Fendt F 24</h5>
-              <a href="Devis.html?vehicle=Fendt%2F%224">
-              <button class="bouton5">demander un devis</button>
-              </a>
+                <div class="row1">
+          <p>Matériel Agricole</p>
+        </div>
+        <div class="row2">
+          <h3>Année : 1957</h3>
+        </div>
+         <div class="row3">
+          <h5>Fendt F 24</h5>
+         </div>
+        <div class="row4">
+          <h5></h5>
+        </div>
+        <div class="row5">
+          <a href="Devis.html?vehicle=Mercedes%20Benz%20O%203500">
+          <button class="bouton5">demander un devis</button>
+          </a>   
+        </div>
             </div>
           </div>
         </div>
