--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 -->
 
 <section class="vehicules">
-      <p>Retrouvez-nous notamment dans la série Tapie sur Netflix ou dans la vidéo "ÉNORME BATTLE ROYALE NERF FORTNITE" d'Amixem sur YouTube.</p>
+      <h2>Retrouvez-nous notamment dans la série Tapie sur Netflix ou dans la vidéo "ÉNORME BATTLE ROYALE NERF FORTNITE" d'Amixem sur YouTube.</h2>
         <a href="Clients.html">
           <button class="bouton3">
             <span>Ils nous ont fait confiance>></span>
