--- a/Vehicules.html
+++ b/Vehicules.html
@@ -68,7 +68,9 @@
 -->
         <div class="gallery">
   <div class="product">
+    <div class="img">
     <img src="images/car1.1.jpg" alt="Mercedes Benz O 3500">
+  </div>
     <div class="product-description">
         <div class="row1">
           <p>Autocar ancien</p>
@@ -91,7 +93,9 @@
   </div>
 
   <div class="product">
+    <div class="img">
     <img src="images/car2.1.jpg" alt="Setra Kässbohrer 215 HD">
+  </div>
     <div class="product-description">
         <div class="row1">
           <p>Autocar ancien</p>
@@ -114,7 +118,9 @@
   </div>
 
   <div class="product">
+    <div class="img">
     <img src="images/car3.1.jpg" alt="Mercedes O321 H">
+  </div>
     <div class="product-description">
        <div class="row1">
           <p>Autocar ancien</p>
@@ -138,7 +144,9 @@
 
 
           <div class="product">
+            <div class="img">
             <img src="images/voiture1.1.jpg" alt="Citroën ID 19">
+          </div>
             <div class="product-description">
               <div class="row1">
           <p>Voiture ancienne</p>
@@ -162,7 +170,9 @@
 
 
           <div class="product">
+            <div class="img">
             <img src="images/voiture2.1.jpg" alt="Citroën D Super">
+          </div>
             <div class="product-description">
                 <div class="row1">
           <p>Voiture ancienne</p>
@@ -186,7 +196,9 @@
           </div>
 
           <div class="product">
+            <div class="img">
             <img src="images/tracteur1.1.jpg" alt="Mc Cormick Farmall D 212">
+          </div>
             <div class="product-description">
                 <div class="row1">
           <p>Matériel Agricole</p>
@@ -209,7 +221,9 @@
           </div>
 
           <div class="product">
+            <div class="img">
             <img src="images/tracteur2.1.avif" alt="Fendt F 24">
+          </div>
             <div class="product-description">
                 <div class="row1">
           <p>Matériel Agricole</p>
