--- a/Clients.html
+++ b/Clients.html
@@ -51,27 +51,45 @@
           <div class="product2">
             <img src="images/netflix.png" alt="Tapie">
             <div class="product-description2">
+              <div class="rowa">
               <p>Série</p>
+            </div>
+            <div class="rowb">
               <h3>2023</h3>
+            </div>
+              <div class="rowc">
               <h5>TAPIE</h5>
+            </div>
             </div>
           </div>
 
           <div class="product2">
             <img src="images/m6.png" alt="Le meilleur patissier">
             <div class="product-description2">
+              <div class="rowa">
               <p>Télévision</p>
+            </div>
+            <div class="rowb">
               <h3>2019</h3>
+            </div>
+              <div class="rowc">
               <h5>Émission 1 : Rentrée magique! / SAISON 8</h5>
+            </div>
             </div>
           </div>
 
           <div class="product2">
             <img src="images/youtube.png" alt="Amixem">
             <div class="product-description2">
+              <div class="rowa">
               <p>Vidéo</p>
+            </div>
+            <div class="rowb">
               <h3>2020</h3>
+            </div>
+            <div class="rowc">
               <h5>AMIXEM : Enorme battle royale nerf fornite ! (dans la vraie vie)</h5>
+            </div>
             </div>
           </div>
 
